[gd_scene load_steps=4 format=3 uid="uid://kgjh2atufhqe"]

[ext_resource type="FontFile" uid="uid://br33sipyuwalp" path="res://Assets/fonts/Caudex-Italic.ttf" id="1_iepht"]
[ext_resource type="Script" path="res://UI/Overlays/DialogueOverlay/DialogueOverlay.gd" id="1_u647w"]
[ext_resource type="FontFile" uid="uid://bku8f7kbvl5b7" path="res://Assets/fonts/PTSansNarrow-Regular.ttf" id="2_ddsk5"]

[node name="DialogueOverlay" type="CanvasLayer"]
script = ExtResource("1_u647w")

[node name="DialogueBox" type="ColorRect" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -339.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[node name="TitleBox" type="ColorRect" parent="DialogueBox"]
layout_mode = 1
offset_left = 50.0
offset_top = -72.0
offset_right = 707.0
color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[node name="BottomLine" type="ColorRect" parent="DialogueBox/TitleBox"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_right = 54.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.0235294, 0.0235294, 0.0235294, 0.698039)

[node name="Title" type="Label" parent="DialogueBox/TitleBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_iepht")
theme_override_font_sizes/font_size = 42
text = "THE WIZARD"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueBox/CenterContainer"]
custom_minimum_size = Vector2(1200, 250)
layout_mode = 2

[node name="Dialogue" type="Label" parent="DialogueBox/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_ddsk5")
theme_override_font_sizes/font_size = 52
text = "Dialogue text"
autowrap_mode = 3
clip_text = true
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="Options" type="VBoxContainer" parent="DialogueBox/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
